manifests/media/sonarr/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  ingress:
    - fromEntities:
        - ingress
        - remote-node
      toPorts:
        - ports:
            - port: "8989"
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
        - matchLabels:
            app.kubernetes.io/name: maintainerr
        - matchLabels:
            app.kubernetes.io/name: overseerr
        - matchLabels:
            app.kubernetes.io/name: prefetcharr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: "8989"
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: transmission
      toPorts:
        - ports:
            - port: "9091"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: home
            io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: "5432"
